// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StaffViewConfirmationPage /> no confirmation number 1`] = `
<div
  id="overflow-wrapper"
>
  <Header />
  <main
    className="pb-5"
    id="certification-page"
  >
    <div
      className="container p-4"
    >
      <h1>
        Retroactive Certification for Unemployment
      </h1>
      <h3>
        Staff View
      </h3>
      <Button
        active={false}
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "Link",
            "propTypes": Object {
              "innerRef": [Function],
              "onClick": [Function],
              "replace": [Function],
              "target": [Function],
              "to": [Function],
            },
            "render": [Function],
          }
        }
        className="text-dark bg-light"
        disabled={false}
        to="/retroactive-certification"
        type="button"
        variant="outline-secondary"
      >
        Search New Claimant
      </Button>
      <h3
        className="mt-5"
      >
        Certification Status
      </h3>
      <CertificationStatus />
      <Button
        active={false}
        className="text-dark bg-light"
        disabled={false}
        onClick={[Function]}
        type="button"
        variant="outline-secondary"
      >
        Print
      </Button>
      <h3
        className="mt-5"
      >
        Certification Weeks
      </h3>
      <ListOfCertifications
        userData={
          Object {
            "programPlan": Array [
              "UI full time",
            ],
            "status": "ok",
            "weeksToCertify": Array [
              0,
              1,
              2,
              5,
              6,
            ],
          }
        }
      />
      <h3
        className="mt-5"
      >
        Retroactive Certification Application Details
      </h3>
      <p>
        The claimant is shown the following on the Retroactive Certification Application.
      </p>
      <ClaimantContent />
    </div>
  </main>
  <Footer
    backToTopTag="certification-page"
  />
</div>
`;

exports[`<StaffViewConfirmationPage /> with confirmation number 1`] = `
<div
  id="overflow-wrapper"
>
  <Header />
  <main
    className="pb-5"
    id="certification-page"
  >
    <div
      className="container p-4"
    >
      <h1>
        Retroactive Certification for Unemployment
      </h1>
      <h3>
        Staff View
      </h3>
      <Button
        active={false}
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "Link",
            "propTypes": Object {
              "innerRef": [Function],
              "onClick": [Function],
              "replace": [Function],
              "target": [Function],
              "to": [Function],
            },
            "render": [Function],
          }
        }
        className="text-dark bg-light"
        disabled={false}
        to="/retroactive-certification"
        type="button"
        variant="outline-secondary"
      >
        Search New Claimant
      </Button>
      <h3
        className="mt-5"
      >
        Certification Status
      </h3>
      <CertificationStatus />
      <Button
        active={false}
        className="text-dark bg-light"
        disabled={false}
        onClick={[Function]}
        type="button"
        variant="outline-secondary"
      >
        Print
      </Button>
      <h3
        className="mt-5"
      >
        Certification Weeks
      </h3>
      <ListOfCertifications
        userData={
          Object {
            "confirmationNumber": "CONFIRMATION_NUMBER",
            "programPlan": Array [
              "PUA full time",
            ],
            "status": "ok",
            "weeksToCertify": Array [
              0,
              1,
              2,
              5,
              6,
            ],
          }
        }
      />
      <h3
        className="mt-5"
      >
        Retroactive Certification Application Details
      </h3>
      <p>
        The claimant is shown the following on the Retroactive Certification Application.
      </p>
      <ClaimantContent />
    </div>
  </main>
  <Footer
    backToTopTag="certification-page"
  />
</div>
`;
